# arap-interactive

./: CMakeLists.txt  README.md
data/: Simplified_Armadillo.ply  sample_cube.ply
docs/: SETUP.md
include/: arap_solver.h  mesh.h  ply_parser.h  sparse_builder.h
src/: CMakeLists.txt  arap_solver.cpp  main.cpp  mesh.cpp  ply_parser.cpp  sparse_builder.cpp
tests/: CMakeLists.txt  test_mesh.cpp  test_ply_parser.cpp  test_simple_arap.cpp  test_sparse_builder.cpp
